MDEV-4575 MySQL client doesn't strip off 5.5.5- prefix while connecting to 10.x server

extend 5.1 client library to read 4 byte capabilities from the first handshake packet.
two higher bytes are always zeros for 5.1 servers.